data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3822.wast
;; Sure, here are the natural language descriptions of the 10 unique differential tests focusing on Incorrect Handling of Control Flow Across Module Boundaries:  1. **Test Imported Function with Correct Parameter Types**:    - **Description**: Test invoking an imported function with parameters matching the expected types and validate that the receiving module handles the transition correctly without stack corruption.    - **Constraint**: The import function signature is validated against the calling module’s context.    - **Relation**: Ensures proper type matching and stack handling across modules.

(assert_invalid
  (module
    (import "env" "imported_func" (func $imported_func (param i32)))
    (func $correct_param_call (call $imported_func (i64.const 0)))
  )
  "type mismatch"
)